# backend

./: .gitignore  Dockerfile  HOW-TO.md  alembic.ini  docker-compose.yml  pyproject.toml
src/backend/application/common/: id_provider.py  token_processor.py  uow.py
src/backend/application/contracts/auth/: logout.py  signin.py
src/backend/application/contracts/catalogs/: catalog.py  create.py  delete.py  get.py  get_root.py
src/backend/application/contracts/devices/: device.py  register.py  send_notification.py
src/backend/application/contracts/documents/: create.py  delete.py  document.py  get.py  upload.py
src/backend/application/errors/: __init__.py  access.py  auth.py  catalog.py  upload.py
src/backend/application/gateways/: catalog.py  device.py  document.py  event.py  event_document.py  rsvp.py  user.py
src/backend/domain/dto/: catalog.py  device.py  document.py  event.py  rsvp.py  user.py
src/backend/domain/entities/: base.py  catalog.py  device.py  document.py  event.py  rsvp.py  ticket.py  user.py
src/backend/domain/enum/: catalog.py  device.py  document.py  event.py  rsvp.py  user.py
src/backend/domain/services/: s3.py
src/backend/infrastructure/: hack.py  settings.py
src/backend/infrastructure/auth/: id_provider.py  jwt_processor.py
src/backend/infrastructure/cache/: session.py
src/backend/infrastructure/database/: uow.py
src/backend/infrastructure/ioc/: __init__.py
src/backend/presentation/queues/: __init__.py  task.py
src/backend/presentation/web/: __init__.py
tests/e2e/: conftest.py
tests/e2e/client/: test_login.py
(+90 files in other folders)
