[project]
name = "backend"
version = "0.1.0"
description = "Backend for mobile app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "dishka>=1.7.2",
    "fastapi>=0.118.0",
    "greenlet>=3.2.4",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "pytz>=2025.2",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "types-pytz>=2025.2.0.20250809",
    "uvicorn>=0.37.0",
    "aiobcrypt (>=3.2.0.post1,<4.0.0)",
    "asyncpg>=0.30.0",
    "aioboto3>=15.2.0",
    "python-magic>=0.4.27",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ARG001",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN401",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "D400",
    "D415",
    "EM101",
    "EM102",
    "EXE002",
    "FBT",
    "FIX002",
    "ISC001",
    "N999",
    "PGH003",
    "PLR0913",
    "PLC0414",
    "PT003",
    "RUF001",
    "RUF002",
    "RUF003",
    "SIM102",
    "TCH",
    "TD002",
    "TD003",
    "TRY003",
    "ERA001"
]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.13"
pretty = true
strict = true
install_types = true
ignore_missing_imports = true
warn_unused_ignores = false
disallow_subclassing_any = false
plugins = ['pydantic.mypy', 'sqlalchemy.ext.mypy.plugin']
